# lab_2_shell_M

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/common/: config.py
src/core/commands/: archive.py  basic_cat.py  basic_cd.py  basic_cp.py  basic_ls.py  basic_mv.py  basic_rm.py  cat.py  cd.py  cp.py  grep.py  history.py  ls.py  mv.py  rm.py  tar.py  undo.py  untar.py  unzip.py  zip.py
src/core/user_commands/: example.py  pwd.py
src/infrastructure/: applicator.py  constants.py  history_manager.py  logger.py  registry.py  tokenizer.py  trash_manager.py
src/services/: command_logger.py  help_call.py  parameter_validator.py  path_normalizer.py
src/shell/: main.py  shell.py
src/utils/: applicator.py  constants.py  path_normalizer.py  registry.py  tokenizer.py
tests/: conftest.py  test_basic_cat.py  test_cat.py  test_cd.py  test_cp.py  test_grep.py  test_history.py  test_history_manager.py  test_ls.py  test_mv.py  test_pwd.py  test_rm.py  test_tar.py  test_tokenizer.py  test_trash_manager.py  test_undo.py  test_untar.py  test_unzip.py  test_zip.py
