[project]
name = "Python_Lab_Shell_Medium"
version = "1.0.1"
description = "Small shell on Python with an ability to use basic file managing commands and a bit more."
requires-python = ">=3.12.2"
dependencies = [
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.uv]
dev-dependencies=[
    "pyfakefs>=5.10.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-branch",
  "--cov-report=term-missing",
  "-q",
]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/__init__.py", "*/main.py", "*/shell.py", "*/common/*", "*/enums/*", "*/dependencies/*"]


[tool.coverage.report]
show_missing = true
fail_under = 10
